# agora

./: .gitignore  LICENSE  Makefile
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 18c2dad13d80_add_transactions_table_and_project_pda_.py  1cadf5eea9b8_remove_wallet_address_from_users.py  20770244d849_update_projects_drop_address_add_.py  34ee27a1af79_add_transactions_table_and_project_pda_.py  47b0658513d4_add_parking_lot_parcels_and_parcel_id_.py  5da18d46724a_create_projects_table.py  6a2f0e99f0f7_remove_parcel_id_from_projects.py  6fc9f27f4f7c_merge_migration_heads.py  b758169dd143_update_projects_drop_address_add_.py  bd2f8882c5ba_add_investment_model.py  f1bc7b55207c_create_users_table.py  f1e804b457d5_merge_migration_heads.py  f2c716b59f31_create_users_table.py
backend/app/: config.py  database.py  main.py
backend/app/api/: router.py
backend/app/api/endpoints/: investments.py  parking_lots.py  projects.py  transactions.py  users.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: health.py  users.py
backend/app/auth/: __init__.py  privy.py
backend/app/models/: __init__.py  base.py  investment.py  parcel.py  parking_lot.py  project.py  transaction.py  user.py
backend/app/schemas/: __init__.py  investment.py  parcel.py  parking_lot.py  project.py  transaction.py  user.py
backend/app/services/: google_maps.py  investment.py  solana.py  transaction.py  user.py
backend/tests/: conftest.py
backend/tests/test_api/: test_users.py
frontend/: env.sample  package.json  (+3 more)
(+15 files in other folders)
